# ged4clf

./: .gitignore  build.gradle.kts  settings.gradle.kts
cpp-lib/: CMakeLists.txt  build.gradle.kts
cpp-lib/src/main/cpp/: GEDLIB.cpp  lib.cpp  utils.cpp
cpp-lib/src/main/headers/: utils.h
gradle/wrapper/: gradle-wrapper.properties
src/main/kotlin/io/github/xyzboom/gedlib/: GEDEnv.kt  GEDException.kt  GEDGraph.kt  GEDNode.kt
src/main/resources/gedlib/linux/: libdoublefann.so.2
src/test/kotlin/io/github/xyzboom/gedlib/: GEDEnvTest.kt
